--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
     <li class="feito">
     <a href="../pm-proj003">Projeto 003</a>
     </li>
-    <li><a href="../pm-proj004">Projeto 004</a></li>
+    <li class="feito">
+    <a href="../pm-proj004">Projeto 004</a>
+    </li>
+    <li>
+    <a href="../pm-proj005">Projeto 005</a>
+    </li>
 </ul>
    
 </body>
