--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
     <li class="feito">
     <a href="../pm-proj004">Projeto 004</a>
     </li>
-    <li>
+    <li class="feito">
     <a href="../pm-proj005">Projeto 005</a>
+    </li>
+    <li class="feito">
+    <a href="../pm-proj006">Projeto 006</a>
     </li>
 </ul>
    
